# Aiw

./: .gitignore  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md  USAGE.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
aim/: __init__.py  cli.py
aim/ai/: __init__.py  brain.py
aim/ans/: __init__.py  registry.py  resolver.py
aim/builder/: __init__.py  engine.py
aim/city/: __init__.py  architect.py  builder.py  citizen.py  educator.py  governor.py  integrity.py  launcher.py  protector.py  roles.py
aim/command_center/: __init__.py  client.py  identity.py  node.py
aim/compute/: __init__.py  executor.py  router.py
aim/content/: __init__.py  layer.py  node.py  store.py
aim/dns/: __init__.py  bridge.py
aim/gateway/: __init__.py  client.py  node.py
aim/health/: __init__.py  metrics.py  reporter.py
aim/identity/: __init__.py  ledger.py  pki.py  signature.py
aim/node/: __init__.py  agent.py  base.py  registry.py
aim/protocol/: __init__.py  handler.py  message.py
aim/relay/: __init__.py  node.py  registry.py
deployment/: Caddyfile  README.md  aim-node.service  aim-web.service
docs/: FOUNDATION.md  INTEROP.md  MESH_ARCHITECTURE.md  THREAT_MODEL.md
meshara/: __init__.py  cli.py
tests/: __init__.py  test_ans.py  test_builder.py  test_city.py  test_command_center.py  test_compute.py  test_content.py  test_dns.py  test_gateway.py  test_health.py  test_identity.py  test_node.py  test_pki.py  test_posting.py  test_protocol.py  test_relay.py  test_transport.py  test_vcloud.py  test_web.py
(+70 files in other folders)
